# infrastructure

./: .gitignore  .sops.yaml  README.md  common.nix  flake.nix
builder/: configuration.nix  nix.nix
cisco-configs/: deploy-configs.py  pyproject.toml
cisco-configs/templates/: OTLAN-AXS-2960G-24.j2  OTLAN-AXS-3560G-48.j2  OTLAN-D-3560G-24.j2
lancache/: configuration.nix  env.nix  lancache.nix
lanparty-seating/: configuration.nix  lanparty-seating.nix
monitoring/: alertmanager.nix  blackbox.nix  configuration.nix  grafana.nix  loki.nix  nginx.nix  prometheus.nix  snmp.nix
otakudc/: configuration.nix  env.nix  hardware-lxc.nix  hardware-vm.nix  samba.nix
proxmox/: configuration.nix  hardware.nix  openvpn.nix  traefik.nix
secrets/: otakudc.yaml  proxmox.yaml  vpn.yaml
secrets/keys/: proxmox.asc  vpn.asc
unifi-controller/: configuration.nix  unifi-controller.nix
vpn/: configuration.nix  tailscale.nix
