[tool.poetry]
name = "cisco-configs"
version = "0.1.0"
description = "Cisco config generator and applyer"
authors = ["Tristan Gosselin-Hane <starcraft66@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
napalm = "^4.0.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
